--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -4,7 +4,9 @@
     a{ 
         text-decoration: none;
     #hero-image{
-
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
 
 
         background-image: url("../img/hero/hero.jpg");
@@ -16,30 +18,7 @@
         height: 840px;
     }
 
-   >h1{
-    font-variation-settings: "wght" 300;
-    font-size: rem-calc(60);
-    color: $darkblue;
-    
-    line-height: .8;
-    padding: 16px;
-
-    @include md{
-        font-variation-settings: "wght" 200;
-    font-size: rem-calc(150);
-
-    padding: 24px 16px;
-    }
-
-
-    @include lg{
-        font-variation-settings: "wght" 200;
-    font-size: rem-calc(200);
-
-    padding: 24px 16px;
-    }
-
-   }
+ 
 
   
         @include md{
@@ -48,19 +27,52 @@
         @include lg{
             height: 1200px;
         }
-        >div{
 
-            display: flex;
-            justify-content: center;
+        >h1{
+            font-variation-settings: "wght" 300;
+            font-size: rem-calc(60);
+            color: $darkblue;
             
-    
-            align-items: center;
+            line-height: .8;
+            padding: 16px;
+        
+            @include md{
+                font-variation-settings: "wght" 200;
+            font-size: rem-calc(150);
+        
+            padding: 24px 16px;
+            }
+        
+        
+            @include lg{
+                font-variation-settings: "wght" 200;
+            font-size: rem-calc(200);
+        
+            padding: 24px 16px;
+            }
+        
+           }
+
+
+
+        
+
+        >div{
+          align-self: center;
+          
+
+           
             i{
                 font-size: rem-calc(100);
                 text-decoration: none;
-                color: white;
+                color: $white;
+                transition: 0.25s;
 
                 padding: 16px;
+
+                &:hover{
+                    color: $darkblue;
+                }
 
     
                 @include md{
@@ -73,6 +85,10 @@
             
         
       
+    }
+
+    >p{
+        color: transparent;
     }
 
 
