--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -13,7 +13,56 @@
         "info info";
 
         #footer-phone{
+
+           
             grid-area: phone;
+
+            
+
+            padding-top: 16px;
+
+            >a{
+                display: flex;
+            align-items: center;
+            @include lg{
+                justify-content: center;
+            }
+            
+            text-decoration: none;
+
+                >i{
+                    padding-right: 16px;
+                    font-size: rem-calc(50);
+                }
+
+                >h6{
+
+                    font-variation-settings: "wght" 400;
+                        font-size: rem-calc(16);
+                        line-height: .9;
+
+                }
+
+
+            }
+
+            a:link,
+            a:visited {
+                color: $lightgreen;
+
+  
+                transition: 00.25s;
+
+                &:hover,
+                &:active {
+                    
+                        color: $lightblue;
+
+
+                   
+                }
+            }
+           
         }
 
         #footer-travel{
@@ -21,6 +70,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
+
+            @include lg{
+                justify-content: left;
+            }
+
+           
            >a{
 
                 text-decoration: none;
@@ -61,11 +116,11 @@
             padding: 20px 0px;
             grid-area: socials;
 
-            >h4{
+            #follow-us{
                 font-variation-settings: "wght" 400;
                         font-size: rem-calc(16);
                         line-height: .9;
-                        color: $lightblue;
+                        color: $lightgreen;
             }
 
             #social-media{
@@ -80,7 +135,7 @@
 
                     a:link,
                     a:visited {
-                        color: $lightgreen;
+                        color: $white;
         
           
                         transition: 00.25s;
@@ -101,14 +156,45 @@
 
         #footer-info{
             grid-area: info;
+            >p{
+
+                font-variation-settings: "wght" 400;
+                font-size: rem-calc(12);
+                line-height: 1.2;
+                color: $lightblue;
+
+                padding: 0px 16px 32px;
+
+                text-align: center;
+
+            }
+        }
+
+        @include md{
+
+           
+            grid-template-columns: 40% 40% auto;
+            grid-template-areas: 
+            "travel phone ."
+            "travel socials ."
+            "info info info";
         }
 
         @include lg{
             display: grid;
-        grid-template-columns: auto auto auto;
+        grid-template-columns: auto 300px 300px 300px auto;
         grid-template-areas: 
-        "phone travel socials"
-        "info info info";
+        ". phone travel socials ."
+        "info info info info info";
+
+        }
+
+        @include xl{
+            display: grid;
+        grid-template-columns: auto 400px 400px 400px auto;
+        grid-template-areas: 
+        ". phone travel socials ."
+        "info info info info info";
 
         }
     }
