--- a/dev/scss/sections/_regions.scss
+++ b/dev/scss/sections/_regions.scss
@@ -107,14 +107,14 @@
    }
 
     .region-img-ht {
-        height: 250px;;
+        height: 250px;
 
         @include md{
-            height: 170px;;
+            height: 170px;
         }
 
         @include lg{
-            height: 350px;;
+            height: 350px;
         }
     }
 
